# mcp-ynab

./: .gitignore  CLAUDE.md  FIELDS.md  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml
server/: server.py  ynab_client.py
server/cache/: delta.py  fallback.py  service.py
server/db/: engine.py  tables.py
server/models/: __init__.py  account.py  budget.py  category.py  month.py  payee.py  transaction.py
src/: config.py  server.py  ynab_client.py
src/app/: globals.css  layout.tsx
src/cache/: delta.py  service.py
src/components/chat/: message-list.tsx  tool-invocation.tsx
src/components/viz/: sankey-chart.tsx
src/db/: engine.py  tables.py
src/models/: __init__.py  account.py  category.py  money_movement.py  month.py  payee.py  payee_location.py  plan.py  scheduled_transaction.py  transaction.py  user.py
src/server/: __init__.py  _shared.py  accounts.py  analytics.py  budgets.py  categories.py  money_movements.py  months.py  payee_locations.py  payees.py  plans.py  scheduled.py  transactions.py  user.py
tests/: test_client.py  test_models.py  test_server.py
web/: package-lock.json
web/src/components/chat/: chat-input.tsx  chat-page.tsx  message-bubble.tsx
web/src/components/ui/: avatar.tsx  button.tsx  card.tsx
web/src/components/viz/: month-summary-card.tsx  tool-result-renderer.tsx  transaction-table.tsx
web/src/lib/: format.ts
web/src/lib/ai/: system-prompt.ts
web/src/lib/mcp/: client.ts  tools.ts
website/: package-lock.json  package.json
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
(+1 files in other folders)
